# phook

./: .gitignore  CMakeLists.txt  README.md  compile.sh
src/: hook.c  hook.h  mapping.c  mapping.h  opts.c  opts.h  phook.c
src/elf/: elf.c  elf.h  parse.c  parse.h  symbols.c  symbols.h
src/loader/: loader.c  loader.h
src/opts/: opts.c  opts.h
src/util/: richtext.h  trace.c  trace.h  util.c  util.h
test/: build_test.sh  library.c  sample.json  target.c
